...

      if (next.error != null && next.error != previous?.error) {
        showBottomAlert(
          context: context,
          title: "Login Gagal",
          message: next.error!,
          yesText: "OK",
          onlyYes: true,
          onYes: () => Navigator.pop(context),
        );
      }
    });
  }
...
          titleSpacing: 0,
          leading: InkWell(
            onTap: () => context.push('/'),
            child: Icon(HeroiconsMini.arrowLeft, color: Colors.grey[950]),
          ),
          title: Text(
            "Login",
            key: const Key("loginPageTitle"),
            style: TextStyle(
              color: Colors.grey[950],
              fontWeight: FontWeight.w600,
            ),
          ),
...

                  children: [
                    /// ==============================
                    /// HEADER
                    /// ==============================
                    Text(
                      'Jawara Pintar',
                      style: TextStyle(
                        fontSize: maxWidth > 500 ? 32 : 26,
                        fontWeight: FontWeight.bold,
                        color: Colors.deepPurpleAccent[400],
                      ),
                    ),
...
                    /// ==============================
                    /// INPUT EMAIL
                    /// ==============================
                    InputField(
                      key: const Key("emailField"),
                      label: "Email",
                      hintText: "Masukkan email",
                      controller: emailC,
                    ),

                    /// ==============================
                    /// INPUT PASSWORD
                    /// ==============================
                    InputField(
                      key: const Key("passwordField"),
                      label: "Password",
                      hintText: "Masukkan password",
                      isPassword: true,
                      controller: passC,
                    ),

                    const SizedBox(height: 30),

...
